refactoring ticket micro and adding functionality to Bff micro
